# plan-act-verify

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SHOWCASE_COPY.md  demo.ps1  pyproject.toml  sitecustomize.py  test.ps1
.github/workflows/: ci.yml
multi_agent_builder/: __init__.py
src/multi_agent_builder/: __init__.py  cli.py  models.py  utils.py
src/multi_agent_builder/demo/: __init__.py  app.py  job_store.py  server.py  views.py
src/multi_agent_builder/evaluation/: __init__.py  evaluation_agent.py
src/multi_agent_builder/implementation/: __init__.py  implementation_agent.py  templates.py  workers.py
src/multi_agent_builder/observability/: __init__.py  logger.py
src/multi_agent_builder/orchestration/: __init__.py  orchestrator_agent.py  retry.py  state.py
src/multi_agent_builder/planning/: __init__.py  architecture_agent.py  heuristics.py  specification_agent.py
src/multi_agent_builder/runtime/: __init__.py  agent_backends.py
src/multi_agent_builder/testing/: __init__.py  runner.py  templates.py  testing_agent.py
tests/: test_demo_app.py  test_orchestrator.py  test_specification_agent.py
