[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-builder"
version = "0.1.0"
description = "Production-style multi-agent system for autonomous prototype builds"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]

[project.scripts]
multi-agent-build = "multi_agent_builder.cli:main"
multi-agent-demo = "multi_agent_builder.demo.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
